@@ -46,7 +46,6 @@ a:visited,
 a:active {
     text-decoration:    none;
     color:              #333399;
-
 }
 
 a:hover {
@@ -170,6 +169,16 @@ button.mult_submit {
     background-color:   transparent;
 }
 
+/* odd items 1,3,5,7,... */
+.odd {
+    background: <?php echo $GLOBALS['cfg']['BgOne']; ?>;
+}
+
+/* even items 2,4,6,8,... */
+.even {
+    background: <?php echo $GLOBALS['cfg']['BgTwo']; ?>;
+}
+
 /* odd table rows 1,3,5,7,... */
 table tr.odd th,
 table tr.odd {
@@ -193,15 +202,30 @@ table tr.marked {
     color:   <?php echo $GLOBALS['cfg']['BrowseMarkerColor']; ?>;
 }
 
+/* hovered items */
+.odd:hover,
+.even:hover,
+.hover {
+    background: <?php echo $GLOBALS['cfg']['BrowsePointerBackground']; ?>;
+    color: <?php echo $GLOBALS['cfg']['BrowsePointerColor']; ?>;
+}
+
 /* hovered table rows */
-table tr.odd:hover,
-table tr.even:hover,
 table tr.odd:hover th,
 table tr.even:hover th,
-table tr.hover th,
-table tr.hover {
+table tr.hover th {
     background:   <?php echo $GLOBALS['cfg']['BrowsePointerBackground']; ?>;
     color:   <?php echo $GLOBALS['cfg']['BrowsePointerColor']; ?>;
+}
+
+/**
+ * marks table rows/cells if the db field is in a where condition
+ */
+tr.condition th,
+tr.condition td,
+td.condition,
+th.condition {
+    border: 1px solid <?php echo $GLOBALS['cfg']['BrowseMarkerBackground']; ?>;
 }
 
 table .value {
@@ -516,6 +540,16 @@ body.loginform a.logo {
     text-align: center;
 }
 
+body.loginform {
+    text-align: center;
+}
+
+body.loginform div.container {
+    text-align: <?php echo $left; ?>;
+    width: 30em;
+    margin: 0 auto;
+}
+
 form.login label {
     float: <?php echo $left; ?>;
     width: 10em;
@@ -593,10 +627,8 @@ ul#topmenu li {
     background-color:   <?php echo $GLOBALS['cfg']['BgOne']; ?>;
     border:             1pt solid <?php echo $GLOBALS['cfg']['BgTwo']; ?>;
     border-bottom:      0;
-    border-radius-topleft: 0.4em;
-    border-radius-topright: 0.4em;
-    -moz-border-radius-topleft: 0.4em;
-    -moz-border-radius-topright: 0.4em;
+    border-top-left-radius: 0.4em;
+    border-top-right-radius: 0.4em;
 }
 
 /* enabled hover/active tabs */
@@ -929,12 +961,12 @@ div#queryboxcontainer div#bookmarkoptions {
 }
 
 #maincontainer li {
-    margin-bottom: 0.3em;
+    margin-bottom:  0.3em;
 }
 /* END main page */
 
 
-<?php if ( $GLOBALS['cfg']['MainPageIconic'] ) { ?>
+<?php if ($GLOBALS['cfg']['MainPageIconic']) { ?>
 /* iconic view for ul items */
 li#li_create_database {
     list-style-image: url(../<?php echo $_SESSION['PMA_Theme']->getImgPath(); ?>b_newdb.png);
@@ -1110,14 +1142,4 @@ li#li_flush_privileges {
 label.desc {
     width: 30em;
     float: <?php echo $left; ?>;
-}
-
-body.loginform {
-    text-align: center;
-}
-
-body.loginform div.container {
-    text-align: <?php echo $left; ?>;
-    width: 30em;
-    margin: 0 auto;
 }
