@@ -37,7 +37,8 @@ h3 {
 }
 
 a:link,
-a:visited {
+a:visited,
+a:active {
     text-decoration:    none;
     color:              #0000FF;
 }
@@ -149,17 +150,23 @@ button.mult_submit {
     background-color:   transparent;
 }
 
-/* odd table rows 1,3,5,7,... */
+/* odd items 1,3,5,7,... */
 table tr.odd th,
-table tr.odd {
-    background:         <?php echo $GLOBALS['cfg']['BgOne']; ?>;
-    text-align:         <?php echo $left; ?>;
+.odd {
+    background: <?php echo $GLOBALS['cfg']['BgOne']; ?>;
 }
 
-/* even table rows 2,4,6,8,... */
+/* even items 2,4,6,8,... */
+table tr.even th,
+.even {
+    background: <?php echo $GLOBALS['cfg']['BgTwo']; ?>;
+}
+
+/* odd table rows 1,3,5,7,... */
+table tr.odd th,
+table tr.odd,
 table tr.even th,
 table tr.even {
-    background:         <?php echo $GLOBALS['cfg']['BgTwo']; ?>;
     text-align:         <?php echo $left; ?>;
 }
 
@@ -170,15 +177,30 @@ table tr.marked {
     color:   <?php echo $GLOBALS['cfg']['BrowseMarkerColor']; ?>;
 }
 
+/* hovered items */
+.odd:hover,
+.even:hover,
+.hover {
+    background: <?php echo $GLOBALS['cfg']['BrowsePointerBackground']; ?>;
+    color: <?php echo $GLOBALS['cfg']['BrowsePointerColor']; ?>;
+}
+
 /* hovered table rows */
-table tr.odd:hover,
-table tr.even:hover,
 table tr.odd:hover th,
 table tr.even:hover th,
-table tr.hover th,
-table tr.hover {
+table tr.hover th {
     background:   <?php echo $GLOBALS['cfg']['BrowsePointerBackground']; ?>;
     color:   <?php echo $GLOBALS['cfg']['BrowsePointerColor']; ?>;
+}
+
+/**
+ * marks table rows/cells if the db field is in a where condition
+ */
+tr.condition th,
+tr.condition td,
+td.condition,
+th.condition {
+    border: 1px solid <?php echo $GLOBALS['cfg']['BrowseMarkerBackground']; ?>;
 }
 
 table .value {
@@ -490,6 +512,16 @@ body.loginform a.logo {
     text-align: center;
 }
 
+body.loginform {
+    text-align: center;
+}
+
+body.loginform div.container {
+    text-align: <?php echo $left; ?>;
+    width: 30em;
+    margin: 0 auto;
+}
+
 form.login label {
     float: <?php echo $left; ?>;
     width: 10em;
@@ -567,10 +599,8 @@ ul#topmenu li {
     background-color:   <?php echo $GLOBALS['cfg']['BgOne']; ?>;
     border:             1pt solid <?php echo $GLOBALS['cfg']['BgTwo']; ?>;
     border-bottom:      0;
-    border-radius-topleft: 0.4em;
-    border-radius-topright: 0.4em;
-    -moz-border-radius-topleft: 0.4em;
-    -moz-border-radius-topright: 0.4em;
+    border-top-left-radius: 0.4em;
+    border-top-right-radius: 0.4em;
 }
 
 /* enabled hover/active tabs */
@@ -877,7 +907,7 @@ div#queryboxcontainer div#bookmarkoptions {
 }
 
 #maincontainer li {
-    margin-bottom: 0.3em;
+    margin-bottom:  0.3em;
 }
 /* END main page */
 
@@ -1058,14 +1088,4 @@ li#li_flush_privileges {
 label.desc {
     width: 30em;
     float: <?php echo $left; ?>;
-}
-
-body.loginform {
-    text-align: center;
-}
-
-body.loginform div.container {
-    text-align: <?php echo $left; ?>;
-    width: 30em;
-    margin: 0 auto;
 }
