@@ -22,6 +22,11 @@ $Source$
     * libraries/auth/config.auth.lib.php: bug #1536112, config not loaded
       (MySQL error 2002 or 2003)
 
+2006-08-11 Sebastian Mendel <cybot_tm@users.sourceforge.net>
+    * css\phpmyadmin.css.php, themes\*:
+      updated themes to 2.9 and some minor fixes
+      thanks to Juergen Wind - windkiel for hinting this (patch #1535169)
+
 2006-08-10 Marc Delisle  <lem9@users.sourceforge.net>
     * lang/danish: Updated, thanks to AlleyKat - dk_alleykat
     * lang/catalan update, thanks to Xavier Navarro (xavin)
